--- a/starter_code/views/partials/navbar.hbs
+++ b/starter_code/views/partials/navbar.hbs
@@ -1,10 +1,10 @@
 <header>
   <nav class="main-nav-wrapper">
     <ul class="main-nav">
-      <li><a href="#/">Home</a></li>
+      <li><a href="/">Home</a></li>
       <!-- other list items here -->
-      <li><a href="#/beers" class="subnav-trigger">Beers</a></li>
-      <li class="go-back"><a href="#0">Random Beer</a></li>
+      <li><a href="/beers" class="subnav-trigger">Beers</a></li>
+      <li class="go-back"><a href="/beerPartials">Random Beer</a></li>
     </ul>
   </nav>
 </header>
