--- a/starter_code/views/partials/beerPartial.hbs
+++ b/starter_code/views/partials/beerPartial.hbs
@@ -1,4 +1,9 @@
 
-{{#each beers}}
-{{> beerPartial}}
-{{/each}}
+<div class="beer-container">
+  <div class="beer-cards">
+    <img src={{this.image_url}}>
+    <h2>{{this.name}}</h2>
+    <h3>{{this.tagline}}</h3>
+    <p>{{this.description}}</p>
+  </div>
+</div>
