--- a/starter_code/views/index.hbs
+++ b/starter_code/views/index.hbs
@@ -1,8 +1,8 @@
-{{> navbar}}
+
 <div class="index-container">
   <img class="beer-img" src="/images/beer.png" alt="" srcset="">
-  <button class="btn btn-all">Check the Beers!</button>
-  <button class="btn btn-random">Check a Random Beer!</button>
+  <a href="/beers"><button class="btn btn-all">Check the Beers!</button></a>
+  <a href="/random-beer"><button class="btn btn-random">Check a Random Beer!</button></a>
 </div>
 
 {{> footer}}
