--- a/starter_code/views/partials/navbar.hbs
+++ b/starter_code/views/partials/navbar.hbs
@@ -4,7 +4,7 @@
       <li><a href="/">Home</a></li>
       <!-- other list items here -->
       <li><a href="/beers" class="subnav-trigger">Beers</a></li>
-      <li class="go-back"><a href="/beerPartials">Random Beer</a></li>
+      <li class="go-back"><a href="/random-beer">Random Beer</a></li>
     </ul>
   </nav>
 </header>
