--- a/starter_code/views/layout.hbs
+++ b/starter_code/views/layout.hbs
@@ -4,12 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="stylesheets/styles.css">
+  <link rel="stylesheet" href="/stylesheets/styles.css">
   <title>IronBeers</title>
 </head>
 <body>
+  {{> navbar}}
   {{{body}}}
-  <script src="javascript/script.js"></script>
+  <script src="/javascript/script.js"></script>
   
 </body>
 </html>
