--- a/starter_code/views/partials/beerPartial.hbs
+++ b/starter_code/views/partials/beerPartial.hbs
@@ -1,7 +1,7 @@
 
 <div class="beer-container">
   <div class="beer-cards">
-    <img src={{this.image_url}}>
+    <a href="/beers/{{this.id}}"><img src={{this.image_url}}></a>
     <h2>{{this.name}}</h2>
     <h3>{{this.tagline}}</h3>
     <p>{{this.description}}</p>
