--- a/starter_code/public/stylesheets/styles.css
+++ b/starter_code/public/stylesheets/styles.css
@@ -23,10 +23,17 @@ nav {
 .main-nav a {
   color: #F7F9F9;
   text-decoration: none;
+  margin: 10px;
  }
 .main-nav li {
   list-style: none;
   flex-direction: row;
+  
+ }
+ .main-nav {
+   display: flex;
+   
+   align-content: space-around;
  }
 .footer-container {
   display: flex;
@@ -55,6 +62,12 @@ nav {
   margin-top: 3%;
   padding: 20px 10px;
  }
+a button {
+  text-decoration: none;
+  background-color: #2081C3;
+  border: none;
+  color: #F7F9F9;
+}
 button .btn-all {
   padding: 20px 10px;
   width: 10%;
