--- a/starter_code/views/index.hbs
+++ b/starter_code/views/index.hbs
@@ -1,8 +1,8 @@
 
 <div class="index-container">
   <img class="beer-img" src="/images/beer.png" alt="" srcset="">
-  <a href="/beers"><button class="btn btn-all">Check the Beers!</button></a>
-  <a href="/random-beer"><button class="btn btn-random">Check a Random Beer!</button></a>
+  <a class="btn btn-all" href="/beers"><button >Check the Beers!</button></a>
+  <a class="btn btn-random" href="/random-beer"><button>Check a Random Beer!</button></a>
 </div>
 
 {{> footer}}
